--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(export_geolinkers)
 export(fips_link)
 export(gadm_link)
 export(gadm_parse)
+export(gb_link)
 export(import_geolinkers)
 export(inspire_link)
 export(inspire_parse)
